[package]
name = "r"
version = "0.1.0"
edition = "2021"
authors = ["Frederica Bernkastel <frederica.bernkastel0@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1", features = ["full"] }
tokio-retry = "0.3"
futures = "0.3"
reqwest = { version = "0.11", features = ["json", "gzip"] }
clap = { version = "4.3", features = ["derive"] }
anyhow = "1"
chrono = "0.4"
regex = "1.9"
lettre = "0.10"
toml = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
maud = "0.25"
env_logger = "0.10"
log = "0.4"